Stage 1/5. Different methods implemented in order to modularize the solution.

--- a/Static Code Analyzer/Search for long lines/task-info.yaml
+++ b/Static Code Analyzer/Search for long lines/task-info.yaml
@@ -91,6 +91,12 @@ files:
   text: |
     # write your code here
   learner_created: false
+- name: analyzer/phyton_code.txt
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/112/stages/609/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Fri, 09 Dec 2022 10:37:33 UTC
 record: -1
