Stage 3/5. __init__ changed to store main path and current file path and content. run method updated to manage if it's just a file or a whole directory. print_line_issue updated with new format which includes file path.

--- a/Static Code Analyzer/Search for long lines/task-info.yaml
+++ b/Static Code Analyzer/Search for long lines/task-info.yaml
@@ -94,7 +94,7 @@ files:
 - name: analyzer/phyton_code.txt
   visible: true
   learner_created: true
-feedback_link: https://hyperskill.org/projects/112/stages/609/implement#comment
+feedback_link: https://hyperskill.org/learn/step/9903#comment
 status: Solved
 feedback:
   message: Congratulations!
