--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,17 +3,17 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/369660/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Thu, 01 Jan 1970 00:00:00 UTC
+update_date: Mon, 12 Dec 2022 22:26:47 UTC
 stages:
 - id: 609
   step: 9903
   is_completed: true
 - id: 610
   step: 9904
-  is_completed: false
+  is_completed: true
 - id: 611
   step: 9905
-  is_completed: false
+  is_completed: true
 - id: 612
   step: 9906
   is_completed: false
